import javax.swing.*;
import java.awt.*;

/**
 * AboutBox of Jabberpoint
 */
public class AboutBox {
    public static void show(Frame parent) {
        JOptionPane.showMessageDialog(parent,
                """
                        JabberPoint is a primitive slide-show program in Java(tm). It
                        is freely copyable as long as you keep this notice and
                        the splash screen intact.
                        Copyright (c) 1995-1997 by Ian F. Darwin, ian@darwinsys.com.
                        Adapted by Gert Florijn (version 1.1) and Sylvia Stuurman (version 1.2 and higher) for
                        the OpenUniversity of the Netherlands, 2002 -- now.
                        Author's version available from http://www.darwinsys.com/""",
                "About JabberPoint",
                JOptionPane.INFORMATION_MESSAGE
        );
    }
}
