@startuml

title __SRC's Class Diagram__\n


    class AboutBox {
        {static} + show()
    }




    abstract class Accessor {
        {static} + DEFAULT_EXTENSION : String
        {static} + DEMO_NAME : String
        + Accessor()
        {static} + getDemoAccessor()
        {abstract} + loadFile()
        {abstract} + saveFile()
    }




    class BitmapItem {
        {static} # FILE : String
        {static} # NOTFOUND : String
        - bufferedImage : BufferedImage
        - imageName : String
        + BitmapItem()
        + BitmapItem()
        + draw()
        + getBoundingBox()
        + getName()
        + toString()
    }




    class DemoPresentation {
        + loadFile()
        + saveFile()
    }




    class JabberPoint {
        {static} # IOERR : String
        {static} # JABERR : String
        {static} # JABVERSION : String
        {static} + main()
    }




    class KeyController {
        + KeyController()
        + keyPressed()
    }




    class MenuController {
        {static} # ABOUT : String
        {static} # EXIT : String
        {static} # FILE : String
        {static} # GOTO : String
        {static} # HELP : String
        {static} # IOEX : String
        {static} # LOADERR : String
        {static} # NEW : String
        {static} # NEXT : String
        {static} # OPEN : String
        {static} # PAGENR : String
        {static} # PREV : String
        {static} # SAVE : String
        {static} # SAVEERR : String
        {static} # SAVEFILE : String
        {static} # TESTFILE : String
        {static} # VIEW : String
        - parent : Frame
        {static} - serialVersionUID : long
        + MenuController()
        + mkMenuItem()
    }




    class Presentation {
        - currentSlideNumber : int
        - showList : ArrayList<Slide>
        - showTitle : String
        + Presentation()
        + Presentation()
        + append()
        + exit()
        + getCurrentSlide()
        + getSize()
        + getSlide()
        + getSlideNumber()
        + getTitle()
        + nextSlide()
        + prevSlide()
        + setShowView()
        + setSlideNumber()
        + setTitle()
        ~ clear()
    }




    class Slide {
        {static} + HEIGHT : int
        {static} + WIDTH : int
        # items : Vector<SlideItem>
        # title : String
        + Slide()
        + append()
        + append()
        + draw()
        + getSize()
        + getSlideItem()
        + getSlideItems()
        + getTitle()
        + setTitle()
        - getScale()
    }




    abstract class SlideItem {
        - level : int
        + SlideItem()
        + SlideItem()
        {abstract} + draw()
        {abstract} + getBoundingBox()
        + getLevel()
    }




    class SlideViewerComponent {
        {static} - BGCOLOR : Color
        {static} - COLOR : Color
        {static} - FONTHEIGHT : int
        {static} - FONTNAME : String
        {static} - FONTSTYLE : int
        {static} - XPOS : int
        {static} - YPOS : int
        - frame : JFrame
        - labelFont : Font
        {static} - serialVersionUID : long
        + SlideViewerComponent()
        + getPreferredSize()
        + paintComponent()
        + update()
    }




    class SlideViewerFrame {
        {static} + HEIGHT : int
        {static} + WIDTH : int
        {static} - JABTITLE : String
        {static} - serialVersionUID : long
        + SlideViewerFrame()
        + setupWindow()
    }

    class Style {
        ~ color : Color
        ~ font : Font
        ~ fontSize : int
        ~ indent : int
        ~ leading : int
        {static} - FONTNAME : String
        {static} - styles : Style[]
        + Style()
        {static} + createStyles()
        + getFont()
        {static} + getStyle()
        + toString()
    }




    class TextItem {
        {static} - EMPTYTEXT : String
        - text : String
        + TextItem()
        + TextItem()
        + draw()
        + getAttributedString()
        + getBoundingBox()
        + getText()
        + toString()
        - getLayouts()
    }




    class XMLAccessor {
        {static} # DEFAULT_API_TO_USE : String
        {static} # IMAGE : String
        {static} # ITEM : String
        {static} # KIND : String
        {static} # LEVEL : String
        {static} # NFE : String
        {static} # PCE : String
        {static} # SHOWTITLE : String
        {static} # SLIDE : String
        {static} # SLIDETITLE : String
        {static} # TEXT : String
        {static} # UNKNOWNTYPE : String
        + loadFile()
        + saveFile()
        # loadSlideItem()
        - getTitle()
    }



  BitmapItem -up-|> SlideItem
  DemoPresentation -up-|> Accessor
  KeyController o-- Presentation : presentation
  MenuController o-- Presentation : presentation
  Presentation o-- SlideViewerComponent : slideViewComponent
  SlideViewerComponent o-- Presentation : presentation
  SlideViewerComponent o-- Slide : slide
  TextItem -up-|> SlideItem
  XMLAccessor -up-|> Accessor



@enduml
